- + move_along_axis con-func
- + move_along_x con-func
- + move_along_y con-func
- + move_along_z con-func
- + move_along_global_x con-func
- + move_along_global_y con-func
- + move_along_global_z con-func
- + move_along_local_x con-func
- + move_along_local_y con-func
- + move_along_local_z con-func
- + get_objects_with_modifiers to accompany select_objects_with_modifiers

[ JYoshi ]
- C Note: Created new category 'ANIMATION / KEYFRAMES' for following functions.
- + add_keyframe
- + remove_keyframe

[ 3D_Bubble ]
- + select_objects_with_modifiers

=== 0.0.5 - 21/09/2020 ===

[ Curtis Holt ]
- Added more object argument contexts to modifier functions, so no object
  needs to be provided (default to active object).
- Added missing primitive ops mesh functions.
- + create_plane
- + create_circle
- + create_uv_sphere
- + create_torus
- + create_grid

[ JYoshi ]
- C Note: New category 'MODES' created for mode functions.
- + set_mode
- + get_mode
- C Note: I have added extra convenience functions for each of the mode setters below.
- + set_object_mode
- + set_edit_mode
- + set_sculpt_mode
- + set_vertex_paint_mode
- + set_weight_paint_mode
- + set_texture_paint_mode
- C Note: New category 'PHYSICS' created for physics functions.
- + add_force_field_physics
- + add_collision_physics
- + add_cloth_physics
- + add_dynamic_paint_physics
- + add_soft_body_physics
- + add_fluid_physics
- + add_rigid_body_physics
- + add_rigid_body_constraint_physics

=== 0.0.4 - 18/09/2020 ===

[ Curtis Holt ]
- Fixed creating primitives return types.
- Importing Euler class for rotations.
- + set_render_engine_cycles con-func.
- + set_render_engine_eevee con-func.
- + set_frame con-func to current_frame(val).
- + get_render_resolution to get render resolution.
- + get_render_resolution_percentage to get render res percentage.
- + render_resolution as a getter and setter.
- + set_render_percentage con-func.
- + set_render_percent con_func.